--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
   --monotype: "Ubuntu Mono";
   --font-size: $font-size;
   --line-height: 1.2em;
-  --color-light: rgb(251, 241, 252);
-  --color-bg: rgb(18, 53, 91);
-  --color-dark: rgb(10, 31, 53);
-  --color-accent: rgb(143, 219, 0);
-  --color-primary: rgb(56, 163, 165);
-  --color-secondary: rgb(175, 79, 0);
+  --color-light: rgb(236, 236, 226);
+  --color-bg: rgb(236, 236, 226);
+  --color-dark: rgb(35, 51, 49);
+  --color-accent: rgb(139, 214, 41);
+  --color-primary: rgb(0, 192, 192);
+  --color-secondary: rgb(65, 83, 88);
   --padding: $padding;
 }
 
@@ -18,7 +18,7 @@ body {
   font-size: var(--font-size);
   line-height: var(--line-height);
   background-color: var(--color-bg);
-  color: var(--color-light);
+  color: var(--color-secondary);
   margin: 0;
 }
 
@@ -28,11 +28,35 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--color-accent);
+  color: var(--color-dark);
   font-family: var(--caps);
-  letter-spacing: 0.25em;
-  padding: 0.25em;
+  padding: 7.5px;
   font-weight: normal;
+  margin: 0.5em 0;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 45px;
+}
+
+h3 {
+  font-size: 40px;
+}
+
+h4 {
+  font-size: 35px;
+}
+
+h5 {
+  font-size: 30px;
+}
+
+h6 {
+  font-size: 25px;
 }
 
 .navbar {
@@ -40,14 +64,15 @@ h6 {
   justify-content: space-between;
   align-items: baseline;
   background-color: var(--color-dark);
-  padding: 0 0.5em 0;
+  padding: 0 0.5em;
+  margin: 0;
   font-size: 15px;
 }
 .navbar .title {
-  padding: 0;
-  font-family: var(--caps);
-  letter-spacing: 0.25em;
-  color: var(--color-primary);
+  padding: 0 0.5em 0 0;
+  font-family: var(--sans-serif);
+  letter-spacing: 0.125em;
+  color: var(--color-light);
 }
 .navbar > ul, .navbar ul {
   margin: 0;
@@ -66,16 +91,16 @@ h6 {
 .navbar > ul > li > a, .navbar ul > li > a {
   display: block;
   padding: 0.5em 0.5em;
-  color: var(--color-secondary);
+  color: var(--color-light);
   text-decoration: none;
 }
 .navbar > ul > li a:hover, .navbar ul > li a:hover {
-  color: var(--color-accent);
+  color: var(--color-primary);
   border-bottom: 2px solid var(--color-primary);
 }
 .navbar > ul > li a:active, .navbar ul > li a:active {
-  background-color: var(--color-info);
-  color: var(--color-light);
+  background-color: var(--color-bg);
+  color: var(--color-accent);
   filter: none;
 }
 .navbar > ul > li > ul, .navbar ul > li > ul {
@@ -92,19 +117,120 @@ h6 {
   visibility: visible;
   opacity: 1;
   display: block;
-  background-color: var(--nav-dark);
+  background-color: var(--color-dark);
 }
 .navbarh1 {
   color: var(--color-light);
-  margin: 0.25em;
+  margin: 0;
   font-size: 1.5em;
   font-weight: normal;
 }
 
-pre, code {
+pre {
   font-family: var(--monotype);
+  color: var(--color-primary);
+  background-color: var(--color-secondary);
+  padding: 0 0.5em 0.25em;
+  margin: 0.5em 2.5em;
+  white-space: pre-wrap;
+  /* css-3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  border-radius: 10px;
+}
+
+code {
+  font-family: var(--monotype);
+  color: var(--color-primary);
+}
+
+p {
+  padding: 0 0.625em;
+}
+
+section:not(> .navbar) {
+  padding: 0 0.625em;
+}
+
+/* checkbox button base element */
+.arche-checkbox > span {
+  display: inline-block;
+  font-size: 30px;
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+/* Selected "checkmark" styles */
+.arche-checkbox > input[type=checkbox] + span::before {
+  display: block;
+  opacity: 0;
+  content: "";
+  width: 10px;
+  height: 20px;
+  border-right: 5px solid var(--color-primary);
+  border-bottom: 5px solid var(--color-primary);
+  transform: rotate(45deg);
+  position: absolute;
+  left: 5px;
+  top: -6px;
+  transition: 400ms;
+}
+
+/* Selected "mark" styles */
+.arche-checkbox > input[type=checkbox]:checked + span::before {
+  opacity: 1;
+}
+
+/* Outline */
+.arche-checkbox > input[type=checkbox] + span::after {
+  display: block;
+  content: "";
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+/* Hide the input */
+.arche-checkbox input {
+  visibility: hidden;
+}
+
+button {
+  color: var(--color-light);
+  border: 2px solid var(--color-secondary);
+  padding: 0.75em;
+  border-radius: 5px;
+  font-family: var(--sans-serif);
+  font-size: var(--font-size);
+  background-color: var(--color-secondary);
+}
+
+button:hover {
+  border: 2px solid var(--color-secondary);
+  color: var(--color-primary);
+}
+
+div {
+  margin: 15px 0;
+}
+
+a {
+  color: var(--color-primary);
+  text-decoration: none;
+}
+
+a:hover {
   color: var(--color-dark);
-  background-color: var(--color-light);
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=style.css.map */
